--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,14 @@
     <script src="./script/canvas2d.js"></script>
     <script src="./script/character.js"></script>
     <script src="./script/scene.js"></script>
+    <script src="./script/sound.js"></script>
     <script src="./script/script.js"></script>
   </head>
   <body>
     <h1>my game</h1>
     <canvas id="main_canvas"></canvas>
+    <div>
+      <input type="button" id="start_button" value="START">
+    </div>
   </body>
 </html>
